--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "grunt build", 
+    "build": "grunt build  && sequelize-cli db:migrate",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "form-data": "^3.0.0",
+    "html5sortable": "^0.9.17",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.11",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "grunt": "^1.1.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "grunt-contrib-watch": "^1.1.0",
